# seaplanes

./: CMakeLists.txt  ChangeLog.md  Makefile  README.md
cmake-extra-modules/: clang-format.cmake  clang-tidy.cmake
doc/: Doxyfile.in
include/: ITimeManagementPolicy.h  LogicalProcessorAttribute.h  LogicalProcessorCommon.h  LogicalProcessorLogger.h  LogicalProcessorObjectClass.h  LogicalProcessorObjectInstance.h  LogicalProcessorObjectInstancePublished.h  LogicalProcessorObjectInstanceSubscribed.h  LogicalProcessorResults.h  ProtoLogicalProcessor.h  SeaplanesTime.h  TimeManagementPolicy.h  TimeManagementPolicyFactory.h  TimeManagementPolicyTimeStep.h  seaplanes.h
src/: ITimeManagementPolicy.cpp  LogicalProcessorAttribute.cpp  LogicalProcessorLogger.cpp  LogicalProcessorObjectClass.cpp  LogicalProcessorObjectInstance.cpp  LogicalProcessorObjectInstancePublished.cpp  LogicalProcessorObjectInstanceSubscribed.cpp  LogicalProcessorResults.cpp  ProtoLogicalProcessor.cpp  SeaplanesTime.cpp  TimeManagementPolicy.cpp  TimeManagementPolicyFactory.cpp  TimeManagementPolicyTimeStep.cpp
templates/: ProtoLogicalProcessor.tcc  TimeLiterals.tcc
